--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,10 +8,19 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link">Home</a>
+            <%= link_to "Home", :root, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "プロフィール", :profile, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "小説を共有する", :new_novel, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%=  link_to "小説を検索する", :books_search, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "登録済みの小説一覧", :books, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "ログアウト", :destroy_user_session, method: :delete, data: {confirm: "ログアウトしますか？"}, class: "nav-link" %>
@@ -30,4 +39,3 @@
     <% end %>
   </div>
 </nav>
-
