--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -1,9 +1,10 @@
 <% provide :title, "小説を検索する" %>
 <div class="container">
+  <h3 class="mt-4">小説を検索する</h1>
   <div class="search-box mt-4">
     <%= form_with url: books_search_path, method: :get do |f| %>
       <div class="input-group mb-4">
-        <%= f.text_field :keyword, class: "form-control" %>
+        <%= f.text_field :keyword, class: "form-control", placeholder: "キーワードを入力してください" %>
         <span class="input-group-btn">
           <%= f.submit "検索", class: "form-control" %>
         </span>
