bookとnarouについてお気に入り機能とテスト実装

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,6 +1,7 @@
 <div class="Firstview">
   <section class="container">
     <h2 class="Firstview-title">お気に入りの小説を記録し、共有しよう。</h2>
-    <p></p>
+    <%= link_to "web小説を検索する", :narous_search, class: "nav-link text-nowrap" %>
+    <%= link_to "小説を検索する", :books_search, class: "nav-link text-nowrap" %>
   </section>
 </div>
