--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -15,3 +15,4 @@
     <p class="Profile-introduction"><%= current_user.introduction %></p>
   </div>
 </div>
+<%= render "shared/books_index", books: @books %>
