--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,23 +12,4 @@
     <% end %>
   </div>
 </div>
-<div class="album py-5">
-  <div class="container">
-    <div class="row">
-      <% @books.each do |book| %>
-        <div class="col-md-4 mt-4 book-box">
-          <div class="card mb-2 shadow-sm h-100">
-            <%= image_tag book.image_url, class: "card-img-top", alt: "小説イメージ" %>
-            <div class="card-body">
-              <h5 class="card-title"><%= book.title %></h5>
-              <p class="card-text"><%= book.author %></p>
-              <div class="d-flex justify-content-between align-items-center mt-2">
-                <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to "レビューする", book %></button>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
+<%= render "shared/books_index", books: @books %>
