--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,11 @@
 <% provide :title, @book.title %>
 <div class="container">
   <h3 class="mt-4 book-title"><%= @book.title %></h3>
+  <% if user_signed_in? %>
+    <div id="btn-like-<%= @book.id %>" class="like-box">
+      <%= render "likes/like_area", book: @book %>
+    </div>
+  <% end %>
   <div class="row mt-4">
     <div class="col-3">
       <div class="card mb-4 shadow-sm mt-3 book-box">
