--- a/app/views/narous/show.html.erb
+++ b/app/views/narous/show.html.erb
@@ -20,7 +20,7 @@
         </div>
       </div>
     </div>
-    <div class="col">
+    <div class="col-9">
       <% if user_signed_in? %>
         <%= render "narou_reviews/form", narou_review: @narou_review, post: @narou %>
       <% end %>
