--- a/app/views/shared/_header_dropdown_user.html.erb
+++ b/app/views/shared/_header_dropdown_user.html.erb
@@ -1,5 +1,5 @@
 <li class="nav-item dropdown">
-  <a class="nav-link dropdown" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+  <a class="nav-link dropdown header-hover" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     <%= render "shared/image", image_size: "25x25", user: current_user %>
     <%= current_user.name %>
   </a>
