--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,7 +17,7 @@
         </div>
       </div>
     </div>
-    <div class="col">
+    <div class="col-9">
       <% if user_signed_in? %>
         <%= render "reviews/form", review: @review, post: @book %>
       <% end %>
