--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,13 +8,13 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <%= link_to "Home", :root, class: "nav-link" %>
+            <%= link_to "Home", :root, class: "nav-link header-hover" %>
           </li>
           <li class="nav-item">
-            <%= link_to "web小説一覧", :narous, class: "nav-link" %>
+            <%= link_to "web小説一覧", :narous, class: "nav-link header-hover" %>
           </li>
           <li class="nav-item">
-            <%= link_to "一般小説一覧", :books, class: "nav-link text-nowrap" %>
+            <%= link_to "一般小説一覧", :books, class: "nav-link text-nowrap header-hover" %>
           </li>
           <li class="nav-item">
           </li>
@@ -25,9 +25,9 @@
       </div>
     <% else %>
       <ul class="navbar-nav flex-row">
-        <li class="nav-item Nav-item"><%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %></li>
-        <li class="nav-item Nav-item"><%= link_to "ログイン", :new_user_session %></li>
-        <li class="nav-item"><%= link_to "新規登録", :new_user_registration %></li>
+        <li class="nav-item Nav-item header-hover"><%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %></li>
+        <li class="nav-item Nav-item header-hover"><%= link_to "ログイン", :new_user_session %></li>
+        <li class="nav-item header-hover"><%= link_to "新規登録", :new_user_registration %></li>
       </ul>
     <% end %>
   </div>
