--- a/app/views/narous/index.html.erb
+++ b/app/views/narous/index.html.erb
@@ -12,22 +12,4 @@
     <% end %>
   </div>
 </div>
-<div class="album py-5">
-  <div class="container">
-    <div class="row">
-      <% @narous.each do |narou| %>
-        <div class="col-md-4 mt-4 narou-box">
-          <div class="card mb-2 shadow-sm h-100">
-            <div class="card-body">
-              <h5 class="card-title"><%= narou.title %></h5>
-              <p class="card-text"><%= narou.writer %></p>
-              <div class="d-flex justify-content-between align-items-center mt-2">
-                <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to "レビューする", narou %></button>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
+<%= render "shared/narous_index",  narous: @narous %>
