--- a/app/views/shared/_books_index.html.erb
+++ b/app/views/shared/_books_index.html.erb
@@ -9,8 +9,13 @@
               <h5 class="card-title"><%= book.title %></h5>
               <p class="card-text"><%= book.author %></p>
               <div class="d-flex justify-content-between align-items-center mt-2">
-                <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to "レビューする", book %></button>
+                <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to "レビューする", book, class: "link-to-review" %></button>
               </div>
+              <% if user_signed_in? %>
+                <div id="btn-like-<%= book.id %>" class="mt-2 like-box">
+                  <%= render "likes/like_area", book: book %>
+                </div>
+              <% end %>
             </div>
           </div>
         </div>
