--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -11,8 +11,26 @@
       <%= link_to "プロフィールを編集", :profile_edit, class: "btn btn-outline-dark"%>
     </div>
   </div>
-  <div class="Profile-information">
+  <div class="Profile-information mt-2">
     <p class="Profile-introduction"><%= current_user.introduction %></p>
   </div>
 </div>
-<%= render "shared/books_index", books: @books %>
+<ul class="py-5 nav nav-pills nav-fill">
+  <li class="nav-item">
+    <%= link_to "一般小説のお気に入り一覧", user_like_path, remote: true, class: "review-tab" %>
+  </li>
+  <li class="nav-item">
+    <%= link_to "web小説のお気に入り一覧", user_narou_like_path, remote: true, class: "review-tab"  %>
+  </li>
+</ul>
+<div>
+  <% if @books.present? %>
+    <div class="like-area">
+      <%= render "shared/books_index", books: @books %>
+    </div>
+  <% elsif @narous.present? %>
+    <div class="like-area">
+      <%= render "shared/narous_index", narous: @narous %>
+    </div>
+  <% end %>
+</div>
