サイト内の表記を小説から本へ修正

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,12 +11,10 @@
             <%= link_to "Home", :root, class: "nav-link header-hover" %>
           </li>
           <li class="nav-item">
+            <%= link_to "書籍一覧", :books, class: "nav-link text-nowrap header-hover" %>
+          </li>
+          <li class="nav-item">
             <%= link_to "web小説一覧", :narous, class: "nav-link header-hover" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "一般小説一覧", :books, class: "nav-link text-nowrap header-hover" %>
-          </li>
-          <li class="nav-item">
           </li>
         </ul>
         <span class="navbar-text">
