--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -2,16 +2,16 @@
   <section class="py-5 text-center container">
     <div class="row py-lg-5">
       <div class="mx-auto">
-        <h1 class="fw-light">小説を記録して、</br>
+        <h1 class="fw-light">本やweb小説を記録して、</br>
           感想を共有しよう！
         </h1>
-        <p class="py-md-2">Okinoveはお気に入りの小説やweb小説を記録し、感想を共有するサービスです。</p>
-        <p>まずは気になる小説を検索してみよう！</p>
+        <p class="py-md-2">Okinoveはお気に入りの本やweb小説を記録し、感想を共有するサービスです。</p>
+        <p>まずは気になる本やweb小説を検索してみよう！</p>
       </div>
     </div>
     <div class="top-search-menu py-lg-5">
       <div class="book_search-area">
-        <p class="mb-2">キーワードで小説を検索する</p>
+        <p class="mb-2">キーワードで本を検索する</p>
         <%= render "shared/books_search" %>
       </div>
       <div class="narou-search-area">
