一般書籍についてプロフィール画面からお気に入り登録解除ができるように修正

--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -22,7 +22,7 @@
 <div>
   <% if @books.present? %>
     <div class="like-area">
-      <%= render "shared/books_index", books: @books %>
+      <%= render "users/profile_like_index", books: @books %>
     </div>
   <% elsif @narous.present? %>
     <div class="like-area">
