--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -6,7 +6,8 @@
           感想を共有しよう！
         </h1>
         <p class="py-md-2">Okinoveはお気に入りの本やweb小説を記録し、感想を共有するサービスです。</p>
-        <p>まずは気になる本やweb小説を検索してみよう！</p>
+        <p class="py-md-2">まずは気になる本やweb小説を検索してみよう！</p>
+        <p class="py-md-2">headerメニューの書籍一覧およびweb小説一覧から現在当サービスに登録されている本やweb小説の確認ができます。</p>
       </div>
     </div>
     <div class="top-search-menu py-lg-5">
