--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -1,6 +1,6 @@
-<% provide :title, "小説を検索する" %>
+<% provide :title, "書籍を検索する" %>
 <div class="container">
-  <h3 class="mt-4">小説を検索する</h1>
+  <h3 class="mt-4">書籍を検索する</h1>
   <div class="search-box mt-4">
     <%= render "shared/books_search" %>
     <% if @books.present? %>
