--- a/app/views/users/like.js.erb
+++ b/app/views/users/like.js.erb
@@ -1,1 +1,1 @@
-$(".like-area").html("<%= escape_javascript(render 'shared/books_index', books: @books) %>")
+$(".like-area").html("<%= escape_javascript(render 'users/profile_like_index', books: @books) %>")
