--- a/app/views/users/narou_like.js.erb
+++ b/app/views/users/narou_like.js.erb
@@ -1,1 +1,1 @@
-$(".like-area").html("<%= escape_javascript(render 'shared/narous_index', narous: @narous) %>")
+$(".like-area").html("<%= escape_javascript(render 'users/profile_narou_like_index', narous: @narous) %>")
