--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -24,7 +24,7 @@
 </div>
 <ul class="py-5 nav nav-pills nav-fill">
   <li class="nav-item">
-    <%= link_to "一般小説の最新レビュー", reviews_latest_path, remote: true, class: "review-tab" %>
+    <%= link_to "一般書籍の最新レビュー", reviews_latest_path, remote: true, class: "review-tab" %>
   </li>
   <li class="nav-item">
     <%= link_to "web小説の最新レビュー", narou_reviews_latest_path, remote: true, class: "review-tab"  %>
