--- a/app/views/users/_profile_narou_like_index.html.erb
+++ b/app/views/users/_profile_narou_like_index.html.erb
@@ -1,17 +1,16 @@
 <div class="album">
   <div class="container">
     <div class="row">
-      <% books.each do |book| %>
-        <div class="col-md-4 mt-4 book-box">
+      <% narous.each do |narou| %>
+        <div class="col-md-4 mt-4 narou-box">
           <div class="card mb-2 shadow-sm h-100">
-            <%= image_tag book.image_url, class: "card-img-top", alt: "小説イメージ" %>
             <div class="card-body">
-              <h5 class="card-title"><%= book.title %></h5>
-              <p class="card-text"><%= book.author %></p>
+              <h5 class="card-title"><%= narou.title %></h5>
+              <p class="card-text"><%= narou.writer %></p>
               <div class="d-flex justify-content-between align-items-center mt-2">
-                <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to "レビューする", book, class: "link-to-review" %></button>
+                <button type="button" class="btn btn-sm btn-outline-secondary"><%= link_to "レビューする", narou, class: "link-to-review" %></button>
               </div>
-              <%= link_to like_path(book), id: "like-btn", method: :delete, data: {confirm: "お気に入り登録を解除しますか？"} do %>
+              <%= link_to narou_like_path(narou), id: "like-btn", method: :delete, data: {confirm: "お気に入り登録を解除しますか？"} do %>
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
                   <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
                 </svg>
